--- a/app/index.html
+++ b/app/index.html
@@ -27,9 +27,9 @@
            </div>
            <nav class="nav nav--right">
              <ul>
-               <li><a href="#our-beginning">Our Beginning</a></li>
-               <li><a href="#features">Features</a></li>
-               <li><a href="#testimonials">Testimonials</a></li>
+               <li><a href="#our-beginning" id="our-beginning-link">Our Beginning</a></li>
+               <li><a href="#features" id="features-link">Features</a></li>
+               <li><a href="#testimonials" id="testimonials-link">Testimonials</a></li>
              </ul>
            </nav>
         </div>
@@ -52,7 +52,7 @@
       </div>
    </div>
 
-  <div id="our-beginning" class="page-section">
+  <div id="our-beginning" class="page-section" data-matching-link="#our-beginning-link">
      <div class="wrapper">
        <h2 class="headline headline--centered headline--light headline--b-margin-small">The first trip we planned <strong>was our own</strong>.</h2>
        <h3 class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin-large">Ever since, we&rsquo;ve been working to make travel <strong>better for everyone</strong>.</h3>
@@ -80,7 +80,7 @@
     </div>
   </div>
 
-  <div id="features" class="page-section page-section--blue">
+  <div id="features" class="page-section page-section--blue" data-matching-link="#features-link">
      <div class="wrapper">
        
        <h2 class="section-title"><span class="icon icon--star section-title__icon"></span>Our <strong>Features</strong></h2>
@@ -116,7 +116,7 @@
    </div>
   </div>
 
-  <div id="testimonials" class="page-section page-section--testimonials">
+  <div id="testimonials" class="page-section page-section--testimonials" data-matching-link="#testimonials-link">
      <div class="wrapper wrapper--no-padding-until-large">
         
         <h2 class="section-title section-title--blue"><span class="icon icon--comment section-title__icon"></span>Real <strong>Testimonials</strong></h2>
@@ -148,7 +148,7 @@
                      <img sizes="160px" srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w">
                   </div>
                   <h3 class="testimonial__title">Cat McKitty</h3>
-                  <h4 class="testimonial__subtitle">>6 Time Escaper</h4>
+                  <h4 class="testimonial__subtitle">6 Time Escaper</h4>
                   <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
                </div>
             </div>
